--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -5,7 +5,7 @@
     <nav class="my-2 my-md-0 me-md-3">
         <a class="p-2 text-dark" title="О клинике" href="#">О Клинике</a>
         <a class="p-2 text-dark" title="Для пациентов" href="#">Для пациентов</a>
-        <a class="p-2 text-dark" title="Для врачей" href="/doctors/login">Для врачей</a>
+        <a class="p-2 text-dark" title="Для врачей" href="/doctors/">Для врачей</a>
         <a class="p-2 text-dark" title="Контакты" href="#">Контакты</a>
     </nav>
 </header>
