--- a/src/main/resources/templates/doctors/info.html
+++ b/src/main/resources/templates/doctors/info.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container mt-3 mb-5">
  <div>
-     <h1 th:text="Добро пожаловать, ${name}"/>
+    <h1> Доктор   </h1>
  </div>
 </div>
 
