--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <h1>Добро пожаловать в клинику</h1>
 
 <div>
-    <img src="mainPhotoClinic.png" width="1024" height="768">
+    <img th:src="@{/image/mainPhotoClinic.png}" width="1024" height="768">
 </div>
 <!--<p th:text="'Hello, ' + ${name} + '!'" />-->
 </body>
