--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>LoginDoctor</title>
+    <title>Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body class="text-center">
@@ -16,11 +16,12 @@
 
         <h1 class="h3 mb-3 fw-normal">Личный кабинет врача</h1>
         <p>
-        <label for="username" class="visually-hidden">Имя пользователя</label>
-        <input type="text" id="username" name="username" class="form-control" placeholder="Username" required
-               autofocus></p>
-      <p>  <label for="password" class="visually-hidden">Пароль</label>
-        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required></p>
+            <label for="username" class="visually-hidden">Имя пользователя</label>
+            <input type="text" id="username" name="username" class="form-control" placeholder="Username" required
+                   autofocus></p>
+        <p><label for="password" class="visually-hidden">Пароль</label>
+            <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+        </p>
         <!--        <div class="checkbox mb-3">-->
         <!--            <label>-->
         <!--                <input type="checkbox" value="remember-me"> Remember me-->
@@ -29,12 +30,13 @@
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
 
+    </form>
 
 
+</div>
 <h6>
-    <a href="/doctors/registration">Регистрация</a>
+    <a href="registration">Регистрация</a>
 </h6>
-
 
 </body>
 </html>
