--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -3,10 +3,10 @@
     <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
     <p class="h5 my-0 me-md-auto fw-normal">Клиника Эдем</p>
     <nav class="my-2 my-md-0 me-md-3">
-        <a class="p-2 text-dark" title="О клинике" href="#">О Клинике</a>
+        <a class="p-2 text-dark" title="О клинике" href="/about">О Клинике</a>
         <a class="p-2 text-dark" title="Для пациентов" href="/patients/">Для пациентов</a>
         <a class="p-2 text-dark" title="Для врачей" href="/doctors/">Для врачей</a>
-        <a class="p-2 text-dark" title="Контакты" href="#">Контакты</a>
+        <a class="p-2 text-dark" title="Контакты" href="/contacts">Контакты</a>
     </nav>
 </header>
 </div>
