--- a/src/main/resources/templates/patients/info.html
+++ b/src/main/resources/templates/patients/info.html
@@ -8,7 +8,10 @@
 <body>
 <div class="container mt-3 mb-5">
  <div>
-    <h1> Пациент   </h1>
+     <h1 th:text="'Здравствуйте, '+${name}"> </h1>
+
+     <a class="p-2 text-dark" title="" href="">Записаться к врачу</a>
+     <a class="p-2 text-dark" title="" href="">Ввести информацию о приеме</a>
  </div>
 </div>
 
