--- a/src/main/resources/templates/doctors/info.html
+++ b/src/main/resources/templates/doctors/info.html
@@ -10,8 +10,8 @@
  <div>
     <h1 th:text="'Здравствуйте, '+${name}"> </h1>
 
-     <a class="p-2 text-dark" title="" href="">Просмотреть расписание приемов</a>
-     <a class="p-2 text-dark" title="" href="">Ввести информацию о приеме</a>
+     <a class="p-2 text-dark" title="Расписание" th:href="@{'/doctors/'+${id}+'/schedule'}">Просмотреть расписание приемов</a>
+     <a class="p-2 text-dark" title="Ввести информацию о приеме" href="">Ввести информацию о приеме</a>
  </div>
 </div>
 
