--- a/src/main/resources/templates/patients/info.html
+++ b/src/main/resources/templates/patients/info.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
+<header th:insert="blocks/header :: header"></header>
 <div class="container mt-3 mb-5">
  <div>
      <h1 th:text="'Здравствуйте, '+${name}"> </h1>
 
-     <a class="p-2 text-dark" title="" href="">Записаться к врачу</a>
-     <a class="p-2 text-dark" title="" href="">Ввести информацию о приеме</a>
+     <a class="p-2 text-dark" title="Записаться к врачу" href="">Записаться к врачу</a>
+     <a class="p-2 text-dark" title="Посмотреть все записи" href="">Посмотреть все записи к врачу</a>
+     <a class="p-2 text-dark" title="Посмотреть посещения" href="">Посмотреть посещения</a>
  </div>
 </div>
 
