--- a/src/main/resources/templates/patients/registration.html
+++ b/src/main/resources/templates/patients/registration.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>RegistrationDoctor</title>
+    <title>RegistrationPatient</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -48,9 +48,9 @@
         </label>
         <br>
 
-        <label for="specialization" class="visually-hidden">Специализация
-            <input type="text" id="specialization" name="specialization" th:value="${specialization}" class="form-control"
-                   placeholder="Специализация" required>
+        <label for="address" class="visually-hidden">Специализация
+            <input type="text" id="address" name="address" th:value="${address}" class="form-control"
+                   placeholder="Адрес" required>
 
         </label>
         <br>
