--- a/src/main/resources/templates/patients/patientMenu.html
+++ b/src/main/resources/templates/patients/patientMenu.html
@@ -11,7 +11,7 @@
  <div>
      <h1 th:text="'Здравствуйте, '+${name}"> </h1>
 
-     <a class="p-2 text-dark" title="Записаться к врачу" th:href="@{'/patients/'+${id}+'/record'}">Записаться к врачу</a>
+     <a class="p-2 text-dark" title="Записаться к врачу" th:href="@{'/patients/'+${id}+'/reservations'}">Записаться к врачу</a>
      <a class="p-2 text-dark" title="Посмотреть все записи" href="">Посмотреть все записи к врачу</a>
      <a class="p-2 text-dark" title="Посмотреть посещения" href="">Посмотреть посещения</a>
  </div>
