--- a/src/main/resources/templates/about/about.html
+++ b/src/main/resources/templates/about/about.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
+<header th:insert="blocks/header :: header"></header>
 <div class="container mt-3 mb-5">
     <div>
         <h1> About </h1>
