--- a/src/main/resources/templates/patients/selectDoctor.html
+++ b/src/main/resources/templates/patients/selectDoctor.html
@@ -15,7 +15,7 @@
 <header th:insert="blocks/header :: header"></header>
 
 <div class="container mt-3 mb-5">
-    <form method="post">
+    <form method="get">
         <h1 class="h3 mb-3 fw-normal">Личный кабинет Пациента</h1>
 
         <div class="form-group">
@@ -32,8 +32,8 @@
 
         <br>
 
-        <label for="doctorName" class="visually-hidden">Имя пользователя
-            <input type="text" id="doctorName" name="doctorName" th:value="${doctorName}" class="form-control"
+        <label for="doctorSurname" class="visually-hidden">Имя пользователя
+            <input type="text" id="doctorSurname" name="doctorSurname" th:value="${doctorSurname}" class="form-control"
                    placeholder="Имя врача"
                    autofocus>
         </label>
@@ -44,17 +44,20 @@
 </div>
 <br>
 <div class="container my-5">
-    <table>
+    <form method="post">
+    <table class="table">
         <tbody>
+
         <tr th:each="d : ${doctors}">
-            <td>th:text="${d.specialization}</td>
-            <td>th:text="${d.name}</td>
-            <td>th:text="${d.surname}</td>
+            <td th:text="${d.specialization}">Специализация</td>
+            <td th:text="${d.name}">Имя</td>
+            <td th:text="${d.surname}">Фамилия</td>
+           <td><button class="btn btn-success" type="submit" th:value="${d}">Выбрать врача</button></td>
         </tr>
         </tbody>
 
     </table>
-
+    </form>
 </div>
 
 </body>
