--- a/src/main/resources/templates/patients/patientMenu.html
+++ b/src/main/resources/templates/patients/patientMenu.html
@@ -12,7 +12,7 @@
      <h1 th:text="'Здравствуйте, '+${name}"> </h1>
 
      <a class="p-2 text-dark" title="Записаться к врачу" th:href="@{'/patients/'+${id}+'/reservations'}">Записаться к врачу</a>
-     <a class="p-2 text-dark" title="Посмотреть все записи" href="">Посмотреть все записи к врачу</a>
+     <a class="p-2 text-dark" title="Посмотреть все записи" th:href="@{'/patients/'+${id}+'/all_reservations'}">Посмотреть все записи к врачу</a>
      <a class="p-2 text-dark" title="Посмотреть посещения" href="">Посмотреть посещения</a>
  </div>
 </div>
