--- a/src/main/resources/templates/patients/appointmentsByPatient.html
+++ b/src/main/resources/templates/patients/appointmentsByPatient.html
@@ -18,6 +18,7 @@
                 <h3 th:text="${appointment.appointmentId.dateOfAppointment}"></h3>
                 <p th:text="${appointment.doctor.surname}"></p>
                 <p th:text="${appointment.diagnosis}"></p>
+                <p th:text="${appointment.dataAppointment}"></p>
                 <button class="btn btn-success" type="submit" th:name="date"
                         th:value="${appointment.appointmentId.dateOfAppointment}">Открыть
                 </button>
