--- a/src/main/resources/templates/doctors/registration.html
+++ b/src/main/resources/templates/doctors/registration.html
@@ -14,49 +14,49 @@
 <H1>Регистрация</H1>
 <header th:insert="blocks/header :: header"></header>
 <div class="container mt-3 mb-5">
-    <form method="post">
+    <form method="post" th:object="${doctorForm}">
         <h1 class="h3 mb-3 fw-normal">Личный кабинет врача</h1>
 
         <label for="login" class="visually-hidden">Имя пользователя
-            <input type="text" id="login" name="login" th:value="${login}" class="form-control"
+            <input type="text" id="login" name="login" th:field="*{login}" class="form-control"
                    placeholder="Имя пользователя" required
                    autofocus>
         </label>
         <br>
 
         <label for="password" class="visually-hidden">Пароль
-            <input type="password" id="password" name="password" th:value="${password}" class="form-control"
+            <input type="password" id="password" name="password" th:field="*{password}" class="form-control"
                    placeholder="Пароль" required>
         </label>
         <br>
 
         <label for="name" class="visually-hidden">Имя
-            <input type="text" id="name" name="name" th:value="${name}" class="form-control"
+            <input type="text" id="name" name="name" th:field="*{name}" class="form-control"
                    placeholder="Имя" required>
         </label>
         <br>
 
         <label for="surname" class="visually-hidden">Фамилия
-            <input type="text" id="surname" name="surname" th:value="${surname}" class="form-control"
+            <input type="text" id="surname" name="surname" th:field="*{surname}" class="form-control"
                    placeholder="Фамилия" required>
         </label>
         <br>
 
         <label for="dateOfBirth" class="visually-hidden">Дата рождения
-            <input type="date" id="dateOfBirth" name="dateOfBirth" th:value="${dateOfBirth}" class="form-control"
+            <input type="date" id="dateOfBirth" name="dateOfBirth" th:field="*{dateOfBirth}" class="form-control"
                    placeholder="Дата рождения" required>
         </label>
         <br>
 
         <label for="specialization" class="visually-hidden">Специализация
-            <input type="text" id="specialization" name="specialization" th:value="${specialization}" class="form-control"
+            <input type="text" id="specialization" name="specialization" th:field="*{specialization}" class="form-control"
                    placeholder="Специализация" required>
 
         </label>
         <br>
 
         <label for="phone" class="visually-hidden">Телефон
-            <input type="text" id="phone" name="phone" th:value="${phone}" class="form-control"
+            <input type="text" id="phone" name="phone" th:field="*{phone}" class="form-control"
                    placeholder="Телефон" required>
             <script>
                 $(function() {
