--- a/src/main/resources/templates/patients/login.html
+++ b/src/main/resources/templates/patients/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:form="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
@@ -11,7 +11,7 @@
 
 
 <div class="container mt-3 mb-5">
-    <form class="form-signin" action="/auth/login" method="post">
+    <form class="form-signin" action="/patients/login" method="post">
 
 
         <h1 class="h3 mb-3 fw-normal">Личный кабинет врача</h1>
@@ -26,15 +26,12 @@
                 th:name="${_csrf.parameterName}"
                th:value="${_csrf.token}"
         />
-
         <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
-
     </form>
-
-
 </div>
+
 <h6>
-    <a href="registration">Регистрация</a>
+    <a href="/patients/registration">Регистрация</a>
 </h6>
 
 </body>
