refactor createAppointment.html

--- a/src/main/resources/templates/doctors/createAppointment.html
+++ b/src/main/resources/templates/doctors/createAppointment.html
@@ -18,7 +18,7 @@
                    autofocus>
         </label>
         <br>
-        <textarea name="data" rows="20" cols="80"  th:field="*{data}"
+        <textarea name="data" rows="20" cols="80"  th:field="*{dataAppointment}"
                   placeholder="Данные и рекомендации" required>
         </textarea>
 
