--- a/src/main/resources/templates/patients/patientMenu.html
+++ b/src/main/resources/templates/patients/patientMenu.html
@@ -16,6 +16,12 @@
      <a class="p-2 text-dark" title="Посмотреть посещения врачей" th:href="@{'/patients/'+${id}+'/appointments'}">Посмотреть посещения</a>
  </div>
 </div>
+<div th:if="${isLoggedIn}">
+                <form action="/patients/logout" method="post">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                    <input type="submit" value="Logout">
+                </form>
 
-</body>
-</html>
+     </div>
+    </body>
+    </html>
