add logout in form

--- a/src/main/resources/templates/patients/patientMenu.html
+++ b/src/main/resources/templates/patients/patientMenu.html
@@ -8,20 +8,22 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container mt-3 mb-5">
- <div>
-     <h1 th:text="'Здравствуйте, '+${name}"> </h1>
+    <div>
+        <h1 th:text="'Здравствуйте, '+${name}"></h1>
 
-     <a class="p-2 text-dark" title="Записаться к врачу" th:href="@{'/patients/'+${id}+'/reservations'}">Записаться к врачу</a>
-     <a class="p-2 text-dark" title="Посмотреть все записи" th:href="@{'/patients/'+${id}+'/all_reservations'}">Посмотреть все записи к врачу</a>
-     <a class="p-2 text-dark" title="Посмотреть посещения врачей" th:href="@{'/patients/'+${id}+'/appointments'}">Посмотреть посещения</a>
- </div>
+        <a class="p-2 text-dark" title="Записаться к врачу" th:href="@{'/patients/'+${id}+'/reservations'}">Записаться к
+            врачу</a>
+        <a class="p-2 text-dark" title="Посмотреть все записи" th:href="@{'/patients/'+${id}+'/all_reservations'}">Посмотреть
+            все записи к врачу</a>
+        <a class="p-2 text-dark" title="Посмотреть посещения врачей" th:href="@{'/patients/'+${id}+'/appointments'}">Посмотреть
+            посещения</a>
+    </div>
 </div>
 <div th:if="${isLoggedIn}">
-                <form action="/patients/logout" method="post">
-                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-                    <input type="submit" value="Logout">
-                </form>
-
-     </div>
-    </body>
-    </html>
+    <form action="/patients/logout" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+        <input type="submit" value="Logout">
+    </form>
+</div>
+</body>
+</html>
