--- a/src/main/resources/templates/doctors/createAppointment.html
+++ b/src/main/resources/templates/doctors/createAppointment.html
@@ -30,6 +30,11 @@
         <button class="btn btn-success" type="submit">Сохранить</button>
     </form>
 </div>
-
+<div th:if="${isLoggedIn}">
+    <form action="/doctors/logout" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+        <input type="submit" value="Logout">
+    </form>
+</div>
 </body>
 </html>
