--- a/src/main/resources/templates/doctors/schedule.html
+++ b/src/main/resources/templates/doctors/schedule.html
@@ -45,5 +45,11 @@
 
     </form>
 </div>
+<div th:if="${isLoggedIn}">
+    <form action="/doctors/logout" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+        <input type="submit" value="Logout">
+    </form>
+</div>
 </body>
 </html>
