--- a/src/main/resources/templates/doctors/searchPatient.html
+++ b/src/main/resources/templates/doctors/searchPatient.html
@@ -51,14 +51,20 @@
                 <td>
                     <input type="hidden"
                            th:name="${_csrf.parameterName}"
-                           th:value="${_csrf.token}"
-                    />
-                    <button class="btn btn-success" type="submit" th:name="patientId" th:value="${p.id}">Выбрать
+                           th:value="${_csrf.token}"/>
+                    <button class="btn btn-success" type="submit" th:name="patientId" th:value="${p.id}">
+                        Выбрать
                     </button>
                 </td>
             </tr>
             </tbody>
         </table>
+    </form>
+</div>
+<div th:if="${isLoggedIn}">
+    <form action="/doctors/logout" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+        <input type="submit" value="Logout">
     </form>
 </div>
 </body>
