--- a/src/main/resources/templates/patients/appointmentsByPatient.html
+++ b/src/main/resources/templates/patients/appointmentsByPatient.html
@@ -12,20 +12,20 @@
     <p>Посещений нет</p>
 </div>
 <div class="container my-5">
-    <form method="post">
         <div class="container my-5">
             <div th:each="appointment : ${appointments}">
                 <h3 th:text="${appointment.appointmentId.dateOfAppointment}"></h3>
                 <p th:text="${appointment.doctor.surname}"></p>
                 <p th:text="${appointment.diagnosis}"></p>
                 <p th:text="${appointment.dataAppointment}"></p>
-                <button class="btn btn-success" type="submit" th:name="date"
-                        th:value="${appointment.appointmentId.dateOfAppointment}">Открыть
-                </button>
             </div>
         </div>
+</div>
+<div th:if="${isLoggedIn}">
+    <form action="/patients/logout" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+        <input type="submit" value="Logout">
     </form>
 </div>
-
 </body>
 </html>
